tests/paczka1/fuzzy1/49721464.err
Error in line 2: B7shYjlM S486 69,0
Error in line 7: B7shYjlM A244 28,5
Error in line 12: Dei S400 197,7
Error in line 25: B7shYjlM A244 50,6
Error in line 27: xVxDlJ S400 46,1
